# Python_web_hw8

./: README.md  create_db.py  demo.sqlite  executes.py  insert.py  pyproject.toml
